#6406: Publication: Fix Newspack Blocks Blog Post Image Alignment (#6425)

--- a/publication/style.css
+++ b/publication/style.css
@@ -1651,12 +1651,21 @@ body {
 
 /* Post Thumbnail */
 .post-thumbnail {
-	background: #000;
 	display: block;
 	float: right;
 	margin: 0 0 12px 12px;
 	width: 60px;
 }
+
+.wpnbha .post-thumbnail {
+	background: none;
+}
+
+.wpnbha.image-aligntop .post-thumbnail {
+	float: unset;
+	width: 100%;
+}
+
 .post-thumbnail img {
 	display: block;
 }
